# core

./: .gitignore  LICENSE  README.md  SECURITY.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  sbom.yml  version-bump.yml
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json  publish.mjs
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_bindings.py
docs/: 02-signing-interface.md  06-agent-access-layer.md  07-supported-chains.md  sdk-cli.md  sdk-node.md  sdk-python.md
lws/: Cargo.toml  README.md  install.sh  skill.md
lws/crates/lws-cli/: Cargo.toml
lws/crates/lws-cli/src/: main.rs
lws/crates/lws-cli/src/commands/: uninstall.rs  wallet.rs
lws/crates/lws-core/: Cargo.toml
lws/crates/lws-signer/: Cargo.toml
ows/: Cargo.toml
ows/crates/ows-cli/: Cargo.toml
ows/crates/ows-core/: Cargo.toml  README.md
ows/crates/ows-lib/: Cargo.toml
ows/crates/ows-pay/: Cargo.toml
ows/crates/ows-signer/: Cargo.toml
readme/partials/: cli-reference.md  supported-chains.md
scripts/: set-version.sh
skills/lws/: SKILL.md
skills/lws/references/: node.md  python.md
skills/ows/: SKILL.md
website/: index.html
website-docs/: index.html
website/css/: style.css
(+44 files in other folders)
