[package]
name = "ows-python"
version = "0.3.2"
edition = "2021"
description = "Python native bindings for the Open Wallet Standard"

[lib]
name = "ows"
crate-type = ["cdylib"]

[dependencies]
ows-lib = { path = "../../ows/crates/ows-lib" }
pyo3 = { version = "0.22", features = ["extension-module"] }
